--- a/doggopictures.html
+++ b/doggopictures.html
@@ -5,6 +5,10 @@
 <hr>
 <h1>Doggo Pictures</h1>
 <hr>
+<p><img src="photos/ct_pri_doggo/IMG_0160.JPG" alt="" width="937" height="624" /></p>
+<p><img src="photos/ct_pri_doggo/IMG_0221.JPG" alt="" width="937" height="624" /></p>
+<p><img src="photos/ct_pri_doggo/IMG_0232.JPG" alt="" width="937" height="624" /></p>
+<p><img src="photos/ct_pri_doggo/IMG_0297.JPG" alt="" width="937" height="624" /></p>
 
 <button class="doggo_return"><span>Return </span></button>
 
