added return button func and to index

--- a/doggopictures.html
+++ b/doggopictures.html
@@ -10,5 +10,10 @@
 <p><img src="photos/ct_pri_doggo/IMG_0232.JPG" alt="" width="937" height="624" /></p>
 <p><img src="photos/ct_pri_doggo/IMG_0297.JPG" alt="" width="937" height="624" /></p>
 
-<button class="doggo_return"><span>Return </span></button>
+<a href="photosroot.html">
+    <button class="doggo_return"><span>Return  </span></button>
+</a> 
 
+<a href="photosroot.html">
+    <button class="doggo_returnindex"><span>Return to Index  </span></button>
+</a>
