ramble or something idk....

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
 
-<a href="blogroot.html" class="blogbutton">Website Blog</a>
+<a href="blogroot.html" class="blogbutton">Ramble or Something... idk</a>
 
