--- a/blogroot.html
+++ b/blogroot.html
@@ -1,5 +1,11 @@
 <link rel="stylesheet" href="blogroot.css">
 <title>Ramble or Something idk...</title>
 <h1>Ramble or Something idk....</h1>
+<p>I just post random stuff here, don't mind me please.</p>
 <hr>
 <a href="11292022.html" class="blogbutton">11-29-2022</a>
+<a href="1132022.html" class="blogbutton">11-3-2022</a>
+<hr>
+<h1>Links</h1>
+<hr>
+<a href="index.html" class="returnbutton">Return</a>
