new css background gradient cuz im cool or something

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
 
 <a href="blogroot.html" class="blogbutton">Ramble or Something... idk</a>
+<a href="tfcmd.html" class="tfcmd">The Forest Console Commands</a>
+
 
