--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <link rel="stylesheet" href="index.css">
+<script>    
+    function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+    }
+    
+    function filterFunction() {
+      var input, filter, ul, li, a, i;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      div = document.getElementById("myDropdown");
+      a = div.getElementsByTagName("a");
+      for (i = 0; i < a.length; i++) {
+        txtValue = a[i].textContent || a[i].innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          a[i].style.display = "";
+        } else {
+          a[i].style.display = "none";
+        }
+      }
+    }
+    </script>
 
 <title>Personal Website | Index</title>
 
@@ -6,8 +27,22 @@
 <hr>
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
-
 <a href="blogroot.html" class="blogbutton">Ramble or Something... idk</a>
 <a href="tfcmd.html" class="tfcmd">The Forest Console Commands</a>
+
+
+<p></p>
+
+<div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Search for a Page</button>
+    <div id="myDropdown" class="dropdown-content">
+      <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+      <a href="index.html">Index</a>
+      <a href="blogroot.html">Ramble or Something idk...</a>
+      <a href="tfcmd.html">The Forest Console Commands</a>
+      <a href="11292022.html">11-29-2022 | The Forest</a>
+      <a href="1132022.html">11-29-2022 | COD MWII 2022</a>
+    </div>
+  </div>
 
 
