--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <a href="tfcmd.html">The Forest Console Commands</a>
       <a href="11292022.html">11-29-2022 | The Forest</a>
       <a href="1132022.html">11-29-2022 | COD MWII 2022</a>
+      <a href="11302022.html">11-30-2022 | Sons of The Forest</a> 
     </div>
   </div>
 
