--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
 <a href="blogroot.html" class="blogbutton">Ramble or Something... idk</a>
 <a href="tfcmd.html" class="tfcmd">The Forest Console Commands</a>
+<a href="aboutme.html" class="aboutme">About Me</a>
+
+<hr>
+<h1>Stuff I Do</h1>
+<p>I do programming and i do Source Engine stuff, i also am creating my own game engine at the moment and it's going very well, as well as this website.</p>
+<hr>
+
 
 
 <p></p>
@@ -39,6 +46,7 @@
       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
       <a href="index.html">Index</a>
       <a href="blogroot.html">Ramble or Something idk...</a>
+      <a href="aboutme.html">About Me</a> 
       <a href="tfcmd.html">The Forest Console Commands</a>
       <a href="11292022.html">11-29-2022 | The Forest</a>
       <a href="1132022.html">11-29-2022 | COD MWII 2022</a>
