standard button for everything, might change later.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 <hr>
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
-<a href="blogroot.html" class="blogbutton">Ramble or Something... idk</a>
-<a href="tfcmd.html" class="tfcmd">The Forest Console Commands</a>
-<a href="aboutme.html" class="aboutme">About Me</a>
+<a href="blogroot.html" class="commonbutton">Ramble or Something... idk</a>
+<a href="aboutme.html" class="commonbutton">About Me</a>
 
 <hr>
 <h1>Stuff I Do</h1>
@@ -47,7 +46,6 @@
       <a href="index.html">Index</a>
       <a href="blogroot.html">Ramble or Something idk...</a>
       <a href="aboutme.html">About Me</a> 
-      <a href="tfcmd.html">The Forest Console Commands</a>
       <a href="11292022.html">11-29-2022 | The Forest</a>
       <a href="1132022.html">11-29-2022 | COD MWII 2022</a>
       <a href="11302022.html">11-30-2022 | Sons of The Forest</a> 
