new blog page and fixed search page links and text

--- a/blogroot.html
+++ b/blogroot.html
@@ -3,6 +3,7 @@
 <h1>Ramble or Something idk....</h1>
 <p>I just post random stuff here, don't mind me please.</p>
 <hr>
+<a href="1272022.html" class="blogbutton">12-7-2022</a>
 <a href="11302022.html" class="blogbutton">11-30-2022</a>
 <a href="11292022.html" class="blogbutton">11-29-2022</a>
 <a href="1132022.html" class="blogbutton">11-3-2022</a>
