--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
 <a href="blogroot.html" class="commonbutton">Ramble or Something... idk</a>
 <a href="aboutme.html" class="commonbutton">About Me</a>
+<a href="photos.html" class="commonbutton">Photos</a>
 
 <hr>
 <h1>Stuff I Do</h1>
