--- a/11292022.html
+++ b/11292022.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="ramblecommon.css">
+<link rel="stylesheet" href="css/ramblecommon.css">
 <title>11-29-2022 | The Forest</title>
 <h1>11-29-2022</h1>
 <hr>
