--- a/11302022.html
+++ b/11302022.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="ramblecommon.css">
+<link rel="stylesheet" href="css/ramblecommon.css">
 <title>11-30-2022 | Sons of The Forest</title>
 <h1>11-30-2022</h1>
 <hr>
