--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="aboutme.css">
+<link rel="stylesheet" href="css/aboutme.css">
 <title>About Me</title>
 <h1>About Me</h1>
 <p>This page does not go indepth about much of my personal life, i keep that private. This page is mostly facts about me.</p>
