--- a/blogroot.html
+++ b/blogroot.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="blogroot.css">
+<link rel="stylesheet" href="css/blogroot.css">
 <title>Ramble or Something idk...</title>
 <h1>Ramble or Something idk....</h1>
 <p>I just post random stuff here, don't mind me please.</p>
