folders for pages now, yay ig

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <hr>
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
-<a href="blogroot.html" class="commonbutton">Ramble or Something... idk</a>
+<a href="rambleroot.html" class="commonbutton">Ramble or Something... idk</a>
 <a href="aboutme.html" class="commonbutton">About Me</a>
 <a href="photos.html" class="commonbutton">Photos</a>
 
@@ -45,12 +45,12 @@
     <div id="myDropdown" class="dropdown-content">
       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
       <a href="index.html">Index</a>
-      <a href="blogroot.html">Ramble or Something idk...</a>
+      <a href="rambleroot.html">Ramble or Something idk...</a>
       <a href="aboutme.html">About Me</a> 
-      <a href="1132022.html">11-3-2022 | COD MWII 2022</a>
-      <a href="11292022.html">11-29-2022 | The Forest</a>
-      <a href="11302022.html">11-30-2022 | Sons of The Forest</a> 
-      <a href="1272022.html">12-7-2022 | Forza</a> 
+      <a href="ramblepages/1132022.html">11-3-2022 | COD MWII 2022</a>
+      <a href="ramblepages/11292022.html">11-29-2022 | The Forest</a>
+      <a href="ramblepages/11302022.html">11-30-2022 | Sons of The Forest</a> 
+      <a href="ramblepages/1272022.html">12-7-2022 | Forza</a> 
     </div>
   </div>
 
