--- a/photos.html
+++ b/photos.html
@@ -4,10 +4,10 @@
 
 <h1>Photos Section</h1>
 
-<p>WIP At the moment.</p>
+<p>Most photos are split into sections, mainly, i want images to load on the screen without waiting forever. But, i have a button on the page that says "See all..." :)</p>
 
-<a href="photos_html/senic_photos.html" class="commonbutton">Senic Photos</a>
-<a href="dog_pictures.html" class="commonbutton">Dog Pictures</a>
+<a href="/photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Beach Photos</a>
+<a href="/photos_html/dog_photos/dog_photos_page1.html" class="commonbutton">Dog Pictures</a>
 <p></p>
 <a href="index.html" class="returnbutton">Return</a>
 <p></p>
