--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
     </script>
 
 <title>Personal Website | Index</title>
-
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="photos.html">Photos</a>
+  <a href="aboutme.html">About Me</a>
+  <a href="rambleroot.html">Ramble or Something... idk</a>
+</div>
 <h1>Personal Website</h1>
 <hr>
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
-<a href="rambleroot.html" class="commonbutton">Ramble or Something... idk</a>
+<p>Let me know if this navbar looks okay, i replaced it since the buttons got a little boring. They are too generic.</p>
+<!--<a href="rambleroot.html" class="commonbutton">Ramble or Something... idk</a>
 <a href="aboutme.html" class="commonbutton">About Me</a>
-<a href="photos.html" class="commonbutton">Photos</a>
+<a href="photos.html" class="commonbutton">Photos</a>-->
 
 <hr>
 <h1>Stuff I Do</h1>
