--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <hr>
 <h1>Stuff I Do</h1>
-<p>I do programming and i do Source Engine stuff, i also am creating my own game engine at the moment and it's going very well, as well as this website.</p>
+<p>I do Source Engine mapping / programming, I am also created a game script and working on a custom game engine for that game. In the mean time, i'll stick to using Unreal Engine 5, and in the long run, if it goes out well, it will be my main game engine :)</p><a href="/aboutme.html" class="commonbutton">About Me</a>
 <hr>
 
 
