worlds dumbest person

--- a/rambleroot.html
+++ b/rambleroot.html
@@ -10,4 +10,4 @@
 <hr>
 <h1>Links</h1>
 <hr>
-<a href="/index.html" class="returnbutton">Return</a>
+<a href="index.html" class="returnbutton">Return</a>
