--- a/photos_html/beach_photos/beachphotos_page2.html
+++ b/photos_html/beach_photos/beachphotos_page2.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="/css/photoscommon.css">
 <title>Beach Photos | Page 2</title>
 <h1>Beach Photos | Section 2</h1>
-<a href="/photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
+<a href="photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0070.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0073.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0080.JPG" alt="" width="861" height="574" /></p>
-<a href="/photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
-<a href="/photos_html/beach_photos/beachphotos_page3.html" class="commonbutton">Page 3</a>
+<a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
+<a href="photos_html/beach_photos/beachphotos_page3.html" class="commonbutton">Page 3</a>
 <p></p>
-<a href="/photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="photos.html" class="commonbutton">Return to Photos Home</a>
