--- a/photos_html/beach_photos/beachphotos_page3.html
+++ b/photos_html/beach_photos/beachphotos_page3.html
@@ -3,7 +3,7 @@
 <h1>Beach Photos | Section 3</h1>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0103.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0104.JPG" alt="" width="861" height="574" /></p>
-<a href="/photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
-<a href="/photos_html/beach_photos/beachphotos_page2.html" class="commonbutton">Page 2</a>
+<a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
+<a href="photos_html/beach_photos/beachphotos_page2.html" class="commonbutton">Page 2</a>
 <p></p>
-<a href="/photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="photos.html" class="commonbutton">Return to Photos Home</a>
