css fix mabye??!!?

--- a/ramblepages/1132022.html
+++ b/ramblepages/1132022.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/ramblecommon.css">
+<link rel="stylesheet" href="css/ramblecommon.css">
 
 <title>11-3-2022 | COD MWII 2022</title>
 
