--- a/photos_html/beach_photos/beachphotos_page2.html
+++ b/photos_html/beach_photos/beachphotos_page2.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/photoscommon.css">
+<link rel="stylesheet" href="/css/photoscommon.css">
 <title>Beach Photos | Page 2</title>
 <h1>Beach Photos | Section 2</h1>
 <a href="photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
