--- a/photos_html/beach_photos/beachphotos_page1.html
+++ b/photos_html/beach_photos/beachphotos_page1.html
@@ -5,7 +5,7 @@
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0045.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0056.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0058.JPG" alt="" width="861" height="574" /></p>
-<a href="photos_html/beach_photos/beachphotos_page2.html" class="commonbutton">Page 2</a>
-<a href="photos_html/beach_photos/beachphotos_page3.html" class="commonbutton">Page 3</a>
+<a href="beachphotos_page2.html" class="commonbutton">Page 2</a>
+<a href="beachphotos_page3.html" class="commonbutton">Page 3</a>
 <p></p>
 <a href="photos.html" class="commonbutton">Return to Photos Home</a>
