--- a/photos_html/beach_photos/beachphotos_all.html
+++ b/photos_html/beach_photos/beachphotos_all.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/photoscommon.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/css/photoscommon.css">
 <title>Beach Photos | Page 1</title>
 <h1>Beach Photos | Section 1</h1>
 <a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Return to Sections</a>
