--- a/photos_html/beach_photos/beachphotos_page1.html
+++ b/photos_html/beach_photos/beachphotos_page1.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="css/photoscommon.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/photoscommon.css">
 <title>Beach Photos | Page 1</title>
 <h1>Beach Photos | Section 1</h1>
-<a href="photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
+<a href="/photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0045.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0056.JPG" alt="" width="861" height="574" /></p>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0058.JPG" alt="" width="861" height="574" /></p>
 <a href="beachphotos_page2.html" class="commonbutton">Page 2</a>
 <a href="beachphotos_page3.html" class="commonbutton">Page 3</a>
 <p></p>
-<a href="photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/photos.html" class="commonbutton">Return to Photos Home</a>
