--- a/photos_html/beach_photos/beachphotos_page3.html
+++ b/photos_html/beach_photos/beachphotos_page3.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/photoscommon.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/photoscommon.css">
 <title>Beach Photos | Page 3</title>
 <h1>Beach Photos | Section 3</h1>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0103.JPG" alt="" width="861" height="574" /></p>
