--- a/ramblepages/1272022.html
+++ b/ramblepages/1272022.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/ramblecommon.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/ramblecommon.css">
 <title>12-7-2022 | Forza Horizon</title>
 <h1>12-7-2022</h1>
 <hr>
