--- a/ramblepages/11302022.html
+++ b/ramblepages/11302022.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/ramblecommon.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/ramblecommon.css">
 <title>11-30-2022 | Sons of The Forest</title>
 <h1>11-30-2022</h1>
 <hr>
