added message, refresh if page css does not load

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </div>
 <h1>Personal Website</h1>
 <hr>
+<h2>Important! If a pages theme does not load, refresh the page!</h2>
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
 <p>Let me know if this navbar looks okay, i replaced it since the buttons got a little boring. They are too generic.</p>
