ramble link fix

--- a/ramblepages/1132022.html
+++ b/ramblepages/1132022.html
@@ -7,4 +7,4 @@
 <p>I found out rumors about a map editor gonna be in Modern Warfare II and I think that's a good idea, if it's true. There hasn't been a map editor since BO3 (2015) so it would be really cool to see the new Radiant they use for newer titles. Question, if they release a map editor, would it use Steam Workshop or their own system.</p>
 <p></p>
 <p>I thought of this when I saw the rumors and I feel like a Steam Workshop integration like Black Ops III would be nice since Steam did all the hard work for setting up the Workshop, now they just got to set up directory's or something (I don't know how its like coding workshop support) Alternatively, they could release mod tools to make custom campaigns with custom weapons and shit like that, just like COD4 or WaW.</p>
-<a href="/rambleroot.html" class="returnbutton">Return</a>
+<a href="rambleroot.html" class="returnbutton">Return</a>
