--- a/photos_html/beach_photos/beachphotos_page2.html
+++ b/photos_html/beach_photos/beachphotos_page2.html
@@ -3,8 +3,11 @@
 <h1>Beach Photos | Section 2</h1>
 <a href="photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0070.JPG" alt="" width="861" height="574" /></p>
+<a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0070.JPG" class="commonbutton">See Full Size</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0073.JPG" alt="" width="861" height="574" /></p>
+<a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0073.JPG" class="commonbutton">See Full Size</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0080.JPG" alt="" width="861" height="574" /></p>
+<a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0080.JPG" class="commonbutton">See Full Size</a>
 <a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
 <a href="photos_html/beach_photos/beachphotos_page3.html" class="commonbutton">Page 3</a>
 <p></p>
