--- a/photos_html/beach_photos/beachphotos_all.html
+++ b/photos_html/beach_photos/beachphotos_all.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/photoscommon.css">
-<title>Beach Photos | Page 1</title>
-<h1>Beach Photos | Section 1</h1>
+<title>Beach Photos</title>
+<h1>Beach Photos</h1>
 <a href="/photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Return to Sections</a>
 <a href="/photos.html" class="commonbutton">Return to Photos Home</a>
 
