--- a/photos_html/beach_photos/beachphotos_page2.html
+++ b/photos_html/beach_photos/beachphotos_page2.html
@@ -11,4 +11,4 @@
 <a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
 <a href="photos_html/beach_photos/beachphotos_page3.html" class="commonbutton">Page 3</a>
 <p></p>
-<a href="photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/photos.html" class="commonbutton">Return to Photos Home</a>
