--- a/ramblepages/1272022.html
+++ b/ramblepages/1272022.html
@@ -5,4 +5,4 @@
 <p>I forgot how good the Forza Games were, I just recently re-installed Forza Horizon 4 and have been playing for hours straight. When I move my computer downstairs on the big screen it just looks fantastic, the game looks photo-real, I've heard Horizon 5 uses photogrammetry for props and detail and thats awesome. Photogrammetry can really create stunning scenes, most notably in Unreal Engine 5</p>
 <p></p>
 <p>It would be cool to have Modding Tools for the Horizon games in the Forza game series, people could create custom maps, custom cars, create new gamemodes, etc. People could create new big open worlds for players to explore and drive around, but, they dont offer modding tools. The closest we've got to "under the hood" of Forza Tech is a debug menu that leaked with a OpusDev build (i think) and it was for Forza 3. Now thinking about it, i might buy Forza 3 on PC and use the debug menu, it looks really cool to fuck with :)</p>
-<a href="rambleroot.html" class="returnbutton">Return</a>
+<a href="/rambleroot.html" class="returnbutton">Return</a>
