--- a/photos_html/beach_photos/beachphotos_page3.html
+++ b/photos_html/beach_photos/beachphotos_page3.html
@@ -9,4 +9,4 @@
 <a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Page 1</a>
 <a href="photos_html/beach_photos/beachphotos_page2.html" class="commonbutton">Page 2</a>
 <p></p>
-<a href="photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/photos.html" class="commonbutton">Return to Photos Home</a>
