--- a/photos_html/beach_photos/beachphotos_all.html
+++ b/photos_html/beach_photos/beachphotos_all.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/photoscommon.css">
 <title>Beach Photos</title>
 <h1>Beach Photos</h1>
-<a href="/photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Return to Sections</a>
+<a href="beachphotos_page1.html" class="commonbutton">Return to Sections</a>
 <a href="/photos.html" class="commonbutton">Return to Photos Home</a>
 
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0045.JPG" alt="" width="861" height="574" /></p>
