--- a/photos.html
+++ b/photos.html
@@ -9,5 +9,5 @@
 <a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Beach Photos</a>
 <a href="photos_html/dog_photos/dog_photos_page1.html" class="commonbutton">Dog Pictures</a>
 <p></p>
-<a href="/index.html" class="returnbutton">Return</a>
+<a href="index.html" class="returnbutton">Return</a>
 <p></p>
