--- a/rambleroot.html
+++ b/rambleroot.html
@@ -3,6 +3,7 @@
 <h1>Ramble or Something idk....</h1>
 <p>I just post random stuff here, don't mind me please.</p>
 <hr>
+<a href="ramblepages/1282022.html" class="blogbutton">12-8-2022</a>
 <a href="ramblepages/1272022.html" class="blogbutton">12-7-2022</a>
 <a href="ramblepages/11302022.html" class="blogbutton">11-30-2022</a>
 <a href="ramblepages/11292022.html" class="blogbutton">11-29-2022</a>
