--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 <h1>Stuff I Do</h1>
 <p>I do Source Engine mapping / programming, I am also created a game script and working on a custom game engine for that game. In the mean time, i'll stick to using Unreal Engine 5, and in the long run, if it goes out well, it will be my main game engine :)</p><a href="aboutme.html" class="commonbutton">About Me</a>
 <hr>
+<h1>Issues</h1>
+<hr>
+<p>Strange graident loop only on Firefox, too lazy to test on Windows right now but its an issue with Firefox loading it or something? I don't know.</p>
 
 
 
