--- a/photos.html
+++ b/photos.html
@@ -6,8 +6,8 @@
 
 <p>Most photos are split into sections, mainly, i want images to load on the screen without waiting forever. But, i have a button on the page that says "See all..." :)</p>
 
-<a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Beach Photos</a>
-<a href="photos_html/dog_photos/dogphotos_page1.html" class="commonbutton">Dog Pictures</a>
+<a href="subpages/photos/beach_photos/beachphotos_page1" class="commonbutton">Beach Photos</a>
+<a href="subpages/photos/dog_photos/dogphotos_page1" class="commonbutton">Dog Pictures</a>
 <p></p>
 <a href="index.html" class="returnbutton">Return</a>
 <p></p>
