Moved pages to Subpages folder

--- a/subpages/photos.html
+++ b/subpages/photos.html
@@ -9,5 +9,5 @@
 <a href="subpages/photos/beach_photos/beachphotos_page1" class="commonbutton">Beach Photos</a>
 <a href="subpages/photos/dog_photos/dogphotos_page1" class="commonbutton">Dog Pictures</a>
 <p></p>
-<a href="index.html" class="returnbutton">Return</a>
+<a href="/personalsitenew/index.html" class="returnbutton">Return</a>
 <p></p>
