--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="css/index.css">
 <script>    
     function myFunction() {
       document.getElementById("myDropdown").classList.toggle("show");
@@ -24,9 +24,9 @@
 <title>Personal Website | Index</title>
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="photos.html">Photos</a>
-  <a href="aboutme.html">About Me</a>
-  <a href="rambleroot.html">Ramble or Something... idk</a>
+  <a href="subpages/photos.html">Photos</a>
+  <a href="subpages/aboutme.html">About Me</a>
+  <a href="subpages/rambleroot.html">Ramble or Something... idk</a>
 </div>
 <h1>Personal Website</h1>
 <hr>
