--- a/subpages/photos.html
+++ b/subpages/photos.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/photos.css">
+<link rel="stylesheet" href="https://github.com/CodeNameBhop/personalsitenew/blob/main/css/photos.css">
 
 <title>Personal Website | Photos</title>
 
@@ -6,8 +6,8 @@
 
 <p>Most photos are split into sections, mainly, i want images to load on the screen without waiting forever. But, i have a button on the page that says "See all..." :)</p>
 
-<a href="subpages/photos/beach_photos/beachphotos_page1" class="commonbutton">Beach Photos</a>
-<a href="subpages/photos/dog_photos/dogphotos_page1" class="commonbutton">Dog Pictures</a>
+<a href="photos/beach_photos/beachphotos_page1.html" class="commonbutton">Beach Photos</a>
+<a href="photos/dog_photos/dogphotos_page1.html" class="commonbutton">Dog Pictures</a>
 <p></p>
 <a href="/personalsitenew/index.html" class="returnbutton">Return</a>
 <p></p>
