css fix and maybe links now

--- a/subpages/aboutme.html
+++ b/subpages/aboutme.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://github.com/CodeNameBhop/personalsitenew/blob/main/css/aboutme.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/aboutme.css">
 <title>About Me</title>
 <h1>About Me</h1>
 <p>This page does not go indepth about much of my personal life, i keep that private. This page is mostly facts about me.</p>
