--- a/subpages/photos/beach_photos/beachphotos_page1.html
+++ b/subpages/photos/beach_photos/beachphotos_page1.html
@@ -11,4 +11,4 @@
 <a href="beachphotos_page2.html" class="commonbutton">Page 2</a>
 <a href="beachphotos_page3.html" class="commonbutton">Page 3</a>
 <p></p>
-<a href="/personalsitenew/photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
