--- a/subpages/photos/dog_photos/dogphotos_all.html
+++ b/subpages/photos/dog_photos/dogphotos_all.html
@@ -90,4 +90,4 @@
 
 
 <hr>
-<a href="/personalsitenew/photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
