--- a/subpages/photos/dog_photos/dogphotos_page3.html
+++ b/subpages/photos/dog_photos/dogphotos_page3.html
@@ -33,5 +33,5 @@
 <a href="dogphotos_page2.html" class="commonbutton">Previous Page</a>
 <a href="dogphotos_page4.html" class="commonbutton">Next Page</a>
 <p></p>
-<a href="/personalsitenew/photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
 <a href="dogphotos_all.html" class="commonbutton">See all...</a>
