--- a/subpages/photos.html
+++ b/subpages/photos.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://github.com/CodeNameBhop/personalsitenew/blob/main/css/photos.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/photos.css">
 
 <title>Personal Website | Photos</title>
 
