Link fixes again :|

--- a/subpages/photos/dog_photos/dogphotos_page1.html
+++ b/subpages/photos/dog_photos/dogphotos_page1.html
@@ -32,5 +32,5 @@
 
 <a href="dogphotos_page2.html" class="commonbutton">Next Page</a>
 <p></p>
-<a href="/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
+<a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
 <a href="dogphotos_all.html" class="commonbutton">See all...</a>
