--- a/subpages/photos/beach_photos/beachphotos_page2.html
+++ b/subpages/photos/beach_photos/beachphotos_page2.html
@@ -8,7 +8,7 @@
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0073.JPG" class="commonbutton">See Full Size</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0080.JPG" alt="" width="861" height="574" /></p>
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0080.JPG" class="commonbutton">See Full Size</a>
-<a href="photos_html/beach_photos/beachphotos_page1.html" class="commonbutton">Previous Page</a>
-<a href="photos_html/beach_photos/beachphotos_page3.html" class="commonbutton">Next Page</a>
+<a href="beachphotos_page1.html" class="commonbutton">Previous Page</a>
+<a href="beachphotos_page3.html" class="commonbutton">Next Page</a>
 <p></p>
 <a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
