--- a/subpages/photos/beach_photos/beachphotos_page3.html
+++ b/subpages/photos/beach_photos/beachphotos_page3.html
@@ -6,6 +6,6 @@
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0103.JPG" class="commonbutton">See Full Size</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0104.JPG" alt="" width="861" height="574" /></p>
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_00104.JPG" class="commonbutton">See Full Size</a>
-<a href="photos_html/beach_photos/beachphotos_page2.html" class="commonbutton">Previous Page</a>
+<a href="beachphotos_page2.html" class="commonbutton">Previous Page</a>
 <p></p>
 <a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
