--- a/subpages/photos/beach_photos/beachphotos_page2.html
+++ b/subpages/photos/beach_photos/beachphotos_page2.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/css/photoscommon.css">
 <title>Beach Photos | Page 2</title>
 <h1>Beach Photos | Section 2</h1>
-<a href="photos_html/beach_photos/beachphotos_all.html" class="commonbutton">See all...</a>
+<a href="beachphotos_all.html" class="commonbutton">See all...</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0070.JPG" alt="" width="861" height="574" /></p>
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0070.JPG" class="commonbutton">See Full Size</a>
 <p><img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/content/img/img_beach_2022/IMG_0073.JPG" alt="" width="861" height="574" /></p>
