Moved styles to wb-content, prepare for breakage.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <h1>Issues</h1>
 <hr>
 <p>Strange graident loop only on Firefox, too lazy to test on Windows right now but its an issue with Firefox loading it or something? I don't know.</p>
+<p>Some links may be broken, because of hosting on a localhost then changing links to suit GitHub Pages.</p>
 
 
 
