Fixed every old CSS link with wb-content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="wb-content/index.css">
 <script>    
     function myFunction() {
       document.getElementById("myDropdown").classList.toggle("show");
