--- a/subpages/photos.html
+++ b/subpages/photos.html
@@ -6,8 +6,9 @@
 
 <p>Most photos are split into sections, mainly, i want images to load on the screen without waiting forever. But, i have a button on the page that says "See all..." :)</p>
 
-<a href="photos/beach_photos/beachphotos_page1.html" class="commonbutton">Beach Photos</a>
-<a href="photos/dog_photos/dogphotos_page1.html" class="commonbutton">Dog Pictures</a>
+<a href="photos/beach_photos/beachphotos_page1.html" class="commonbutton">Beach Photos 2022</a>
+<a href="photos/dog_photos/dogphotos_page1.html" class="commonbutton">Dog Pictures 2022</a>
+<a href="photos/ski_trip/ski_trip_page1.html" class="commonbutton">Ski Trip 1979</a>
 <p></p>
 <a href="/personalsitenew/index.html" class="returnbutton">Return</a>
 <p></p>
