Fixed img03 width / height

--- a/subpages/photos/ski_trip/ski_trip_page1.html
+++ b/subpages/photos/ski_trip/ski_trip_page1.html
@@ -21,7 +21,7 @@
 <hr>
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/02.jpg" class="commonbutton">See Full Size</a>
 <hr>
-<img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/03.jpg" alt="" width="1056" height="709" />
+<img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/03.jpg"/>
 <hr>
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/03.jpg" class="commonbutton">See Full Size</a>
 <hr>
