Re-added view all on SkiTrip and fixed HR error

--- a/subpages/photos/ski_trip/ski_trip_page4.html
+++ b/subpages/photos/ski_trip/ski_trip_page4.html
@@ -8,6 +8,8 @@
 <p>Dimensions: 1608 x 1080</p>
 <p>Program: IJ Scan Utility</p>
 <hr>
+<a href="ski_trip_all.html" class="commonbutton">View All..</a>
+<p></p>
 <a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/30.jpg" class="commonbutton">See Full Size</a>
 <hr>
 <img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/31.jpg" alt="" width="1056" height="709" />
