--- a/subpages/photos/ski_trip/ski_trip_page1.html
+++ b/subpages/photos/ski_trip/ski_trip_page1.html
@@ -8,6 +8,7 @@
 <p>Dimensions: 1608 x 1080</p>
 <p>Program: IJ Scan Utility</p>
 <hr>
+<a href="ski_trip_all.html" class="commonbutton">View All..</a>
 
 <img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_ski_1979/00.jpg" alt="" width="1056" height="709" />
 <hr>
