Fixed return button and navbar

--- a/subpages/webissues/webissues.html
+++ b/subpages/webissues/webissues.html
@@ -2,11 +2,10 @@
 
 <title>Personal Website | Index</title>
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="subpages/webissues.html.html">Issues Root</a>
-  <a href="subpages/webisu/major.html">Major Bug</a>
-  <a href="subpages/webisu/moderate.html">Moderate</a>
-  <a href="subpages/webisu/smallbug.html">Small Bug</a>
+  <a class="active" href="webissues.html">Issues Root</a>
+  <a href="major.html">Major Bug</a>
+  <a href="moderate.html">Moderate</a>
+  <a href="smallbug.html">Small Bug</a>
 </div>
 <h1>Website Issues</h1>
 <hr>
