--- a/subpages/photos/scotts_site_survey.html
+++ b/subpages/photos/scotts_site_survey.html
@@ -1,5 +1,17 @@
 <link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/wb-content/photoscommon.css">
 <title>Scotts Bluff Site Survey</title>
 <h1>Scotts Bluff Site Survey</h1>
-<p></p>
+<hr>
+<img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_scott/IMG_20180211_0124.jpg"/>
+<hr>
+<a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_scott/IMG_20180211_0124.jpg" class="commonbutton">See Full Size</a>
+<hr>
+<img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_scott/IMG_20180211_0125.jpg"/>
+<hr>
+<a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_scott/IMG_20180211_0125.jpg" class="commonbutton">See Full Size</a>
+<hr>
+<img src="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_scott/IMG_20180211_0127.jpg"/>
+<hr>
+<a href="https://raw.githubusercontent.com/CodeNameBhop/personalsitenew/main/wb-content/images/img_scott/IMG_20180211_0127.jpg" class="commonbutton">See Full Size</a>
+<hr>
 <a href="/personalsitenew/subpages/photos.html" class="commonbutton">Return to Photos Home</a>
