Removed website issues sub-pages and fixed <title>

--- a/subpages/webissues/webissues.html
+++ b/subpages/webissues/webissues.html
@@ -1,12 +1,6 @@
 <link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/wb-content/issues.css">
 
-<title>Personal Website | Index</title>
-<div class="topnav">
-  <a class="active" href="webissues.html">Issues Root</a>
-  <a href="major.html">Major Bug</a>
-  <a href="moderate.html">Moderate</a>
-  <a href="smallbug.html">Small Bug</a>
-</div>
+<title>Website Issues</title>
 <h1>Website Issues</h1>
 <hr>
 <p>Gradiant issues on Firefox, the gradiant seems to not loop properly.</p>
