Moved CSS files to bin/css and common to bin/css/common/

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<link rel="stylesheet" href="wb-content/index.css">
+<link rel="stylesheet" href="bin/css/index.css">
 
 <title>Personal Website | Index</title>
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="subpages/photos.html">Photos</a>
-  <a href="subpages/aboutme.html">About Me</a>
-  <a href="subpages/rambleroot.html">Ramble or Something... idk</a>
-  <a href="subpages/webissues/webissues.html">Issues</a>
+  <a href="wb-content/subpages/photos.html">Photos</a>
+  <a href="wb-content/subpages/aboutme.html">About Me</a>
+  <a href="wb-content/subpages/rambleroot.html">Ramble or Something... idk</a>
+  <a href="wb-content/subpages/webissues/webissues.html">Issues</a>
 </div>
 <h1>Personal Website</h1>
 <hr>
