--- a/wb-content/subpages/rambleroot_redestest.html
+++ b/wb-content/subpages/rambleroot_redestest.html
@@ -1,6 +1,15 @@
-<link rel="stylesheet" href="blogroot_redes.css">
+<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/bin/css/blogroot_redes.css">
 
 <title>Ramble or something idk..</title>
+<div class="window" name="About">
+    <div class="writebox">
+        <h1>About</h1>
+        <hr>
+        <p>I just ramble about random stuff here, i made this redesign since seprate pages were kind of getting annoying to make. This new window design fits what my website is going for, i was inspired off of someone else doing it and i decided to do it as well. I hope this fits, and i tried my best to make it look good.</p>
+        <p></p>
+        <p>Happy Holidays!</p>
+    </div>
+</div>
   <div class="window" name="11-3-2022">
     <div class="writebox">
         <h1>Modern Warfare II</h1>
@@ -9,7 +18,7 @@
         <p></p>
         <p>I thought of this when I saw the rumors and I feel like a Steam Workshop integration like Black Ops III would be nice since Steam did all the hard work for setting up the Workshop, now they just got to set up directory's or something (I don't know how its like coding workshop support) Alternatively, they could release mod tools to make custom campaigns with custom weapons and shit like that, just like COD4 or WaW.</p>
     </div>
-</div>x
+</div>
     <div class="window" name="11-29-2022">
         <div class="writebox">
             <h1>The Forest</h1>
@@ -27,9 +36,6 @@
         <p>The weapons showcased in the trailer is a nice touch, something better then the Flintlock Pistol in the original game. The crafting and everything looks more realistic but i can see it getting in the way for say, you want to build a base with spiked walls and you have to break one log at a time. That would get very annoying very fast, they might have a system where you can just build it with the logs already with spikes? I don't know, the game hasn't had any gameplay videos yet from Endnight so, honestly who knows.</p>
         <p>That woman in the trailer, I hope she's not like a character you have to interact with because that would be annoying in a game like The Forest. I've heard in a Q&A with Endnight from Farkets YouTube Channel that you can scare her away or not do anything with her? Just gonna do that, I don't like looking after NPCs in video games since they are just programmed AI.</p>
         <p>I'm honestly surprised that Sons of The Forest is even Unity game, since it looks like a proprietary or Unreal Engine 5 Game. They've done a damn good job and they deserve all the credit they can get for the amazing game that is The Forest and Sons of The Forest,  it sucks that it had to be delayed, but I get game development is not an easy process, since I do it myself and, yeah no it's not easy AT ALL, lol.</p>
-        <iframe width="1280" height="720"
-        src="https://www.youtube.com/watch?v=fsGVzf-2I5I">
-        </iframe>
     </div>
 </div>
 <div class="window" name="12-7-2022">
