Made ramble page look cooler

--- a/wb-content/subpages/rambleroot_redestest.html
+++ b/wb-content/subpages/rambleroot_redestest.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://codenamebhop.github.io/personalsitenew/bin/css/blogroot_redes.css">
+<link rel="stylesheet" href="blogroot_redes.css">
 
 <title>Ramble or something idk..</title>
 <div class="window" name="About">
@@ -54,5 +54,6 @@
         <p>I've learned a lot over the past week about how Github Pages works, the button links the most and css. This is has been good so far except a few roadblocks but i'll figure them out eventually, like i did with the link problem to other html pages, which was so easy (im stupid) you have to add /reponame/index.html or page.html not /page.html or something stupid.</p>
     </div>
 </div>
+<a href="/personalsitenew/index.html" class="commonbutton">Index Page</a>
 
     
