Fixed button on Index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 <p>Hey, welcome to my personal website, i'm doing a rebrand from Google Sites since i wanted to do something that was more hands on. I love Google Sites don't get me wrong but i want to get better in HTML and CSS / JS so yeah.</p>
 <p>I just put random stuff on here like photos and whatnot, I have to get all the pictures from my Google Sites and put it on here.</p>
 <p>Let me know if this navbar looks okay, i replaced it since the buttons got a little boring. They are too generic.</p>
-<!--<a href="rambleroot.html" class="commonbutton">Ramble or Something... idk</a>
-<a href="aboutme.html" class="commonbutton">About Me</a>
-<a href="photos.html" class="commonbutton">Photos</a>-->
 
 <hr>
 <h1>Stuff I Do</h1>
-<p>I do Source Engine mapping / programming, I am also created a game script and working on a custom game engine for that game. In the mean time, i'll stick to using Unreal Engine 5, and in the long run, if it goes out well, it will be my main game engine :)</p><a href="aboutme.html" class="commonbutton">About Me</a>
+<p>I do Source Engine mapping / programming, I am also created a game script and working on a custom game engine for that game. In the mean time, i'll stick to using Unreal Engine 5, and in the long run, if it goes out well, it will be my main game engine :)</p><a href="wb-content/subpages/aboutme.html" class="commonbutton">About Me</a>
 
