--- a/wb-content/subpages/rambleroot_redestest.html
+++ b/wb-content/subpages/rambleroot_redestest.html
@@ -54,4 +54,11 @@
         <p>I've learned a lot over the past week about how Github Pages works, the button links the most and css. This is has been good so far except a few roadblocks but i'll figure them out eventually, like i did with the link problem to other html pages, which was so easy (im stupid) you have to add /reponame/index.html or page.html not /page.html or something stupid.</p>
     </div>
 </div>
+<div class="window" name="1-9-2023">
+    <div class="writebox">
+        <h1>Sons of The Forest (again)</h1>
+        <hr>
+        <p>A new preview for Sons of The Forest came out and the game looks so good, like i've said already a million times. That ai companion looks neat and all, don't think ill use him a lot or any companions on another playthrough since i want to see what its like without companions on a second playthrough. Still the game looks really good.</p>
+    </div>
+</div>
 <a href="/personalsitenew/index.html" class="commonbutton">Index Page</a>
